tests/semantic/11-type-while.ref
"tests/semantic/11-type-while.cl", line 11:20, Semantic error: While condition has type A instead of Bool
"tests/semantic/11-type-while.cl", line 11:14, Semantic error: Type Object of assigned expression is incompatible with declared type A of identifier a
Compilation halted
